--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "test": "test"
   },
   "scripts": {
+    "prepare": "npm ci && npm run build",
     "build": "webpack --config webpack.config.js",
     "generate-and-deploy-docs": "npm run generate-docs && gh-pages --dist docs --dest docs",
     "watch": "webpack --watch --config webpack.config.js",
